Applied a security method. Made requests immutable.